--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ dependencies = [
     "ruff>=0.15.0",
     "fastapi>=0.128.4",
     "uvicorn>=0.40.0",
+    "pytest>=9.0.2",
 ]
 
 [project.scripts]
